make sure page title h1 text is left aligned

--- a/static/sass/_courseware.scss
+++ b/static/sass/_courseware.scss
@@ -211,4 +211,5 @@ nav.progress.wrapper-course-material
 	word-spacing: .05em;
 	text-transform: uppercase;
 	margin-top:15px;
+	text-align:left;
 	}
